--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
 
 </head>
 
 <body>
-    <header class="header conteiner navigation ">
+    <!-- <header class="header conteiner navigation "> -->
 
-        <!-- NAV -->
-        <nav class="navigation">
+    <!-- NAV -->
+    <!-- <nav class="navigation">
             <a href="./index.html" class="logo"><span class="logoferst">Web</span>Studio</a>
             <ul class="site-nav list">
                 <li class="list-item "><a href="./index.html" class="link curent">Studio</a></li>
@@ -30,28 +31,28 @@
 
                 <li class="list-item"><a href="" class="link">Contacts</a></li>
             </ul>
-        </nav>
+        </nav> -->
 
-        <!-- ADRES -->
-        <address class="navigation address">
+    <!-- ADRES -->
+    <!-- <address class="navigation address">
             <ul class="auth-nav list">
                 <li class="list-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
 
                 <li class="list-item"><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-    </header>
+    </header> -->
     <main>
 
         <!--HERO  -->
-        <section class="hero">
+        <!-- <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-btn btn" data-modal-open>Order Service</button>
-        </section>
+        </section> -->
 
 
         <!-- PRIORITET AT WORK -->
-        <section class="section">
+        <!-- <section class="section">
             <div class="conteiner">
                 <h2 class="section-title hidden">priorities at work</h2>
                 <ul class="list list-prior">
@@ -103,11 +104,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- WHAT ARE WE DOING -->
-        <section class="section bottom">
+        <!-- <section class="section bottom">
             <div class="conteiner">
                 <h2 class="section-title">What are we doing</h2>
                 <ul class="list list-fotowork ">
@@ -121,11 +122,11 @@
                             width="360" height="300"></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
 
         <!-- OUR TEAM -->
-        <section class="team-section section">
+        <!-- <section class="team-section section">
             <div class="conteiner">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="list list-team">
@@ -299,10 +300,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- Customers -->
-        <section class="section-customers">
+        <!-- <section class="section-customers">
             <div class="conteiner">
                 <h2 class="section-title">Customers</h2>
                 <ul class="list">
@@ -351,23 +352,23 @@
 
                 </ul>
             </div>
-        </section>
+        </section> -->
 
 
 
     </main>
 
     <!-- FOOTER -->
-    <footer class="page-footer ">
-        <div class="conteiner conteiner-footer">
+    <!-- <footer class="page-footer "> -->
+    <!-- <div class="conteiner conteiner-footer">
             <div class="logo-footer logo-text-footer">
                 <a href="./index.html" class="logo logo-footer"><span class="logoferst">Web</span>Studio</a>
                 <p class="text-footer">Increase the flow of customers and
                     sales for your business with digital
                     marketing & growth
                     solutions.</p>
-            </div>
-            <div class="social-media logo-text-footer">
+            </div> -->
+    <!-- <div class="social-media logo-text-footer">
                 <p class="text-footer-social">Social media</p>
 
                 <ul class="list-icon-footer">
@@ -402,17 +403,17 @@
 
                 </ul>
 
-            </div>
-            <div class="footer-form">
+            </div> -->
+    <!-- <div class="footer-form">
                 <form>
 
                     <p class="foote-form-text">Subscribe</p>
                     <div class="form-input-btn">
                         <label class="footer-form-lable">
 
-                            <input type="email" name="user-email" class="form-input-text" placeholder="E-mail" required>
-                            <!-- <span class="form-lable-text">E-mail</span> -->
-                        </label>
+                            <input type="email" name="user-email" class="form-input-text" placeholder="E-mail" required> -->
+    <!-- <span class="form-lable-text">E-mail</span> -->
+    <!-- </label>
 
 
                         <button type="submit" class="btn footer-form-btn">
@@ -423,9 +424,9 @@
                         </button>
                     </div>
                 </form>
-            </div>
-        </div>
-    </footer>
+            </div> -->
+    <!-- </div> -->
+    <!-- </footer> -->
 
 
     <!-- Modal -->
