--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <img src="./images/markguerrero.jpg" alt="Mark Guerrero" class="teamcard" width="264"
                             height="260">
                         <div class="cont-text-team">
-                            <h3 class="subtitle">Mark Guerrero</h3>
+                            <h3 class="subtitle-team">Mark Guerrero</h3>
                             <p class="text-team">Product Designer</p>
                             <ul class="list list-icon">
                                 <li>
@@ -176,7 +176,7 @@
                     <li class="item">
                         <img src="./images/tomford.jpg" alt="Tom Ford" class="teamcard" width="264" height="260">
                         <div class="cont-text-team">
-                            <h3 class="subtitle">Tom Ford</h3>
+                            <h3 class="subtitle-team">Tom Ford</h3>
                             <p class="text-team">Frontend Developer</p>
                             <ul class="list list-icon">
                                 <li>
@@ -218,7 +218,7 @@
                         <img src="./images/camilagarcia.jpg" alt="Camila Garcia" class="teamcard" width="264"
                             height="260">
                         <div class="cont-text-team">
-                            <h3 class="subtitle">Camila Garcia</h3>
+                            <h3 class="subtitle-team">Camila Garcia</h3>
                             <p class="text-team">Marketing</p>
                             <ul class="list list-icon">
                                 <li>
@@ -261,7 +261,7 @@
                         <img src="./images/danielwilson.jpg" alt="Daniel Wilson" class="teamcard" width="264"
                             height="260">
                         <div class="cont-text-team">
-                            <h3 class="subtitle">Daniel Wilson</h3>
+                            <h3 class="subtitle-team">Daniel Wilson</h3>
                             <p class="text-team">UI Designer</p>
                             <ul class="list list-icon">
                                 <li>
@@ -304,9 +304,9 @@
 
         <!-- Customers -->
         <!-- <section class="section-customers">
-            <div class="conteiner">
+            <div class="conteiner conteiner-customers">
                 <h2 class="section-title">Customers</h2>
-                <ul class="list">
+                <ul class="list list-customers">
                     <li class="customers-item">
                         <a href="" class="customers-link">
                             <svg class="customers-icon-yaco">
@@ -359,16 +359,16 @@
     </main>
 
     <!-- FOOTER -->
-    <!-- <footer class="page-footer "> -->
-    <!-- <div class="conteiner conteiner-footer">
+    <footer class="page-footer ">
+        <div class="conteiner conteiner-footer">
             <div class="logo-footer logo-text-footer">
                 <a href="./index.html" class="logo logo-footer"><span class="logoferst">Web</span>Studio</a>
                 <p class="text-footer">Increase the flow of customers and
                     sales for your business with digital
                     marketing & growth
                     solutions.</p>
-            </div> -->
-    <!-- <div class="social-media logo-text-footer">
+            </div>
+            <div class="social-media logo-text-footer">
                 <p class="text-footer-social">Social media</p>
 
                 <ul class="list-icon-footer">
@@ -403,17 +403,17 @@
 
                 </ul>
 
-            </div> -->
-    <!-- <div class="footer-form">
+            </div>
+            <div class="footer-form">
                 <form>
 
                     <p class="foote-form-text">Subscribe</p>
                     <div class="form-input-btn">
                         <label class="footer-form-lable">
 
-                            <input type="email" name="user-email" class="form-input-text" placeholder="E-mail" required> -->
-    <!-- <span class="form-lable-text">E-mail</span> -->
-    <!-- </label>
+                            <input type="email" name="user-email" class="form-input-text" placeholder="E-mail" required>
+                            <span class="form-lable-text">E-mail</span>
+                        </label>
 
 
                         <button type="submit" class="btn footer-form-btn">
@@ -424,9 +424,9 @@
                         </button>
                     </div>
                 </form>
-            </div> -->
-    <!-- </div> -->
-    <!-- </footer> -->
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Modal -->
