--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <!-- <header class="header conteiner navigation "> -->
+    <header class="header conteiner navigation ">
 
-    <!-- NAV -->
-    <!-- <nav class="navigation">
+        <!-- NAV -->
+        <nav class="navigation">
             <a href="./index.html" class="logo"><span class="logoferst">Web</span>Studio</a>
             <ul class="site-nav list">
                 <li class="list-item "><a href="./index.html" class="link curent">Studio</a></li>
@@ -31,28 +31,28 @@
 
                 <li class="list-item"><a href="" class="link">Contacts</a></li>
             </ul>
-        </nav> -->
+        </nav>
 
-    <!-- ADRES -->
-    <!-- <address class="navigation address">
+        <!-- ADRES -->
+        <address class="navigation address">
             <ul class="auth-nav list">
                 <li class="list-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
 
                 <li class="list-item"><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-    </header> -->
+    </header>
     <main>
 
         <!--HERO  -->
-        <!-- <section class="hero">
+        <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-btn btn" data-modal-open>Order Service</button>
-        </section> -->
+        </section>
 
 
         <!-- PRIORITET AT WORK -->
-        <!-- <section class="section">
+        <section class="section">
             <div class="conteiner">
                 <h2 class="section-title hidden">priorities at work</h2>
                 <ul class="list list-prior">
@@ -104,11 +104,11 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
 
         <!-- WHAT ARE WE DOING -->
-        <!-- <section class="section bottom">
+        <section class="section bottom">
             <div class="conteiner">
                 <h2 class="section-title">What are we doing</h2>
                 <ul class="list list-fotowork ">
@@ -122,11 +122,11 @@
                             width="360" height="300"></li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
 
         <!-- OUR TEAM -->
-        <!-- <section class="team-section section">
+        <section class="team-section section">
             <div class="conteiner">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="list list-team">
@@ -300,10 +300,10 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- Customers -->
-        <!-- <section class="section-customers">
+        <section class="section-customers">
             <div class="conteiner conteiner-customers">
                 <h2 class="section-title">Customers</h2>
                 <ul class="list list-customers">
@@ -352,7 +352,7 @@
 
                 </ul>
             </div>
-        </section> -->
+        </section>
 
 
 
@@ -361,7 +361,7 @@
     <!-- FOOTER -->
     <footer class="page-footer ">
         <div class="conteiner conteiner-footer">
-            <div class="logo-footer logo-text-footer">
+            <div class=" logo-text-footer">
                 <a href="./index.html" class="logo logo-footer"><span class="logoferst">Web</span>Studio</a>
                 <p class="text-footer">Increase the flow of customers and
                     sales for your business with digital
@@ -412,7 +412,7 @@
                         <label class="footer-form-lable">
 
                             <input type="email" name="user-email" class="form-input-text" placeholder="E-mail" required>
-                            <span class="form-lable-text">E-mail</span>
+                            <!-- <span class="form-lable-text">E-mail</span> -->
                         </label>
 
 
