--- a/index.html
+++ b/index.html
@@ -192,15 +192,18 @@
                 <h2 class="section-title">What are we doing</h2>
                 <ul class="list list-fotowork ">
 
-                    <li class="fotowork-item"><img src="./images/computer.jpg" alt="computer" class="computer"
-                            width="360" height="300">
+                    <li class="fotowork-item">
+                        <img srcset="./images/computer.jpg 1x, ./images/computer-2x.jpg 2x" src="./images/computer.jpg"
+                            alt="computer" class="computer" width="360" height="300">
                     </li>
 
-                    <li class="fotowork-item"><img src="./images/phone.jpg" alt="phone" class="phone" width="360"
-                            height="300"></li>
+                    <li class="fotowork-item"><img srcset="./images/phone.jpg 1x, ./images/phone-2x.jpg 2x"
+                            src="./images/phone.jpg" alt="phone" class="phone" width="360" height="300"></li>
 
-                    <li class="fotowork-item"><img src="./images/computerandphone.jpg" alt="computerandphone"
-                            class="computerandphone" width="360" height="300"></li>
+                    <li class="fotowork-item"><img
+                            srcset="./images/computerandphone.jpg 1x, ./images/computerandphone-2x.jpg 2x"
+                            src="./images/computerandphone.jpg" alt="computerandphone" class="computerandphone"
+                            width="360" height="300"></li>
                 </ul>
             </div>
         </section>
@@ -213,8 +216,9 @@
                 <ul class="list list-team">
 
                     <li class="item">
-                        <img src="./images/markguerrero.jpg" alt="Mark Guerrero" class="teamcardmarkguerrero"
-                            width="264" height="260">
+                        <img srcset="./images/markguerrero.jpg 1x, ./images/markguerrero-2x.jpg 2x"
+                            src="./images/markguerrero.jpg" alt="Mark Guerrero" class="teamcardmarkguerrero" width="264"
+                            height="260">
                         <div class="cont-text-team">
                             <h3 class="subtitle-team">Mark Guerrero</h3>
                             <p class="text-team">Product Designer</p>
@@ -255,7 +259,8 @@
                     </li>
 
                     <li class="item">
-                        <img src="./images/tomford.jpg" alt="Tom Ford" class="teamcardtomford" width="264" height="260">
+                        <img srcset="./images/tomford.jpg 1x, ./images/tomford-2x.jpg 2x" src="./images/tomford.jpg"
+                            alt="Tom Ford" class="teamcardtomford" width="264" height="260">
                         <div class="cont-text-team">
                             <h3 class="subtitle-team">Tom Ford</h3>
                             <p class="text-team">Frontend Developer</p>
@@ -296,8 +301,9 @@
                     </li>
 
                     <li class="item ">
-                        <img src="./images/camilagarcia.jpg" alt="Camila Garcia" class="teamcardcamilagarcia"
-                            width="264" height="260">
+                        <img srcset="./images/camilagarcia.jpg 1x, ./images/camilagarcia-2x.jpg 2x"
+                            src="./images/camilagarcia.jpg" alt="Camila Garcia" class="teamcardcamilagarcia" width="264"
+                            height="260">
                         <div class="cont-text-team">
                             <h3 class="subtitle-team">Camila Garcia</h3>
                             <p class="text-team">Marketing</p>
@@ -339,8 +345,9 @@
                     </li>
 
                     <li class="item ">
-                        <img src="./images/danielwilson.jpg" alt="Daniel Wilson" class="teamcarddanielwilson"
-                            width="264" height="260">
+                        <img srcset="./images/danielwilson.jpg 1x, ./images/danielwilson-2x.jpg 2x"
+                            src="./images/danielwilson.jpg" alt="Daniel Wilson" class="teamcarddanielwilson" width="264"
+                            height="260">
                         <div class="cont-text-team">
                             <h3 class="subtitle-team">Daniel Wilson</h3>
                             <p class="text-team">UI Designer</p>
@@ -599,7 +606,7 @@
     </div>
 
     <script src="./js/modal.js"></script>
-    <script src="./js/mobyl.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
