--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </button>
 
         <!-- Mob Menu -->
-        <div class="mob-menu is-hidden" data-mobyl>
+        <div class="mob-menu" data-mobyl>
             <div>
                 <button type="button" class="menu-btn-close" data-mobyl-close>
                     <svg class="menu-btn-icon-close">
