--- a/index.html
+++ b/index.html
@@ -19,35 +19,38 @@
 </head>
 
 <body>
-    <header class="header conteiner navigation ">
+    <header class="header   ">
 
         <!-- NAV -->
-        <nav class="navigation">
-            <a href="./index.html" class="logo"><span class="logoferst">Web</span>Studio</a>
-            <ul class="site-nav list">
-                <li class="list-item "><a href="./index.html" class="link curent">Studio</a></li>
+        <div class="conteiner navigation">
+            <nav class="navigation">
+                <a href="./index.html" class="logo"><span class="logoferst">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="list-item "><a href="./index.html" class="link curent">Studio</a></li>
 
-                <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
+                    <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
 
-                <li class="list-item"><a href="" class="link">Contacts</a></li>
-            </ul>
-        </nav>
+                    <li class="list-item"><a href="" class="link">Contacts</a></li>
+                </ul>
+            </nav>
 
-        <!-- ADRES -->
-        <address class="navigation address">
-            <ul class="auth-nav list">
-                <li class="list-item"><a href="mailto:info@devstudio.com"
-                        class="link auth-nav-link ">info@devstudio.com</a></li>
+            <!-- ADRES -->
+            <address class="navigation address">
+                <ul class="auth-nav list">
+                    <li class="list-item"><a href="mailto:info@devstudio.com"
+                            class="link auth-nav-link ">info@devstudio.com</a></li>
 
-                <li class="list-item"><a href="tel:+110001111111" class="link auth-nav-link">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
-        <button type="button" class="menu-btn-open" data-mobyl-open>
-            <svg class="menu-btn-icon">
-                <use href="./images/icons.svg#icon-btn-open"></use>
-            </svg>
-        </button>
+                    <li class="list-item"><a href="tel:+110001111111" class="link auth-nav-link">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+            <button type="button" class="menu-btn-open" data-mobyl-open>
+                <svg class="menu-btn-icon">
+                    <use href="./images/icons.svg#icon-btn-open"></use>
+                </svg>
+            </button>
+        </div>
+
 
         <!-- Mob Menu -->
         <div class="mob-menu" data-mobyl>
@@ -125,8 +128,10 @@
 
         <!--HERO  -->
         <section class="hero">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="hero-btn btn" data-modal-open>Order Service</button>
+            <div>
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button type="button" class="hero-btn btn" data-modal-open>Order Service</button>
+            </div>
         </section>
 
 
